force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/vacRep__Vacation_Replacement_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the vacation replacement app</description>
    <label>Vacation Replacement Config</label>
    <pluralLabel>Vacation Replacement Configs</pluralLabel>
</CustomObject>