force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/fields/vacRep__Basic_Filter__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Basic_Filter__c</fullName>
    <description>Use SOQL-Expression (without &quot;where&quot; keyword) e.g. &quot;Status = &apos;Active&apos; AND isDeleted__c = false&quot;</description>
    <inlineHelpText>Use SOQL-Expression (without &quot;where&quot; keyword) e.g. &quot;Status = &apos;Active&apos; AND isDeleted__c = false&quot;</inlineHelpText>
    <label>Basic Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>