force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/fields/vacRep__Object__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Object__c</fullName>
    <description>Defines the object for that this configuration is valid. Can&apos;t be combined with &quot;special object&quot;</description>
    <inlineHelpText>Defines the object for that this configuration is valid. Can&apos;t be combined with &quot;special object&quot;</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Subsstitute_Configs</relationshipLabel>
    <relationshipName>Subsstitute_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>