force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/fields/vacRep__Special_Objects__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Special_Objects__c</fullName>
    <description>Possibility to use objects that are no selectable sObjects in the &quot;object&quot;-picklist. Can&apos;t be combined with the &quot;object&quot;-field</description>
    <inlineHelpText>Possibility to use objects that are no selectable sObjects in the &quot;object&quot;-picklist. Can&apos;t be combined with the &quot;object&quot;-field</inlineHelpText>
    <label>Special Objects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>