force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/validationRules/vacRep__Object_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>vacRep__Object_must_be_selected</fullName>
    <active>true</active>
    <description>An object or a special object must be selected</description>
    <errorConditionFormula>ISBLANK(vacRep__Object__c) &amp;&amp; TEXT(vacRep__Special_Objects__c) == &apos;&apos;</errorConditionFormula>
    <errorMessage>One object must be selected</errorMessage>
</ValidationRule>