force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/validationRules/vacRep__Only_one_object.validationRule-meta.xml
<ValidationRule>
    <fullName>vacRep__Only_one_object</fullName>
    <active>true</active>
    <description>An object or a special object must be selected</description>
    <errorConditionFormula>NOT(ISBLANK(vacRep__Object__c)) &amp;&amp; NOT(TEXT(vacRep__Special_Objects__c) == &apos;&apos;)</errorConditionFormula>
    <errorMessage>Only one object can be selected</errorMessage>
</ValidationRule>