force-app/main/default/objects/vacRep__Vacation_Replacement_Config__mdt/listViews/vacRep__All_Vacation_Replacement_Configs.listView-meta.xml
<ListView>
    <fullName>vacRep__All_Vacation_Replacement_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>vacRep__Object__c</columns>
    <columns>vacRep__Basic_Filter__c</columns>
    <columns>vacRep__Special_Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vacation Replacement Configs</label>
</ListView>